Feat : add cookie instead of token (XSS vulnerability), login and logout